fixed gif width on mobile by accounting for project video link container

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -193,6 +193,10 @@ body {
     margin-bottom: 8rem;
   }
 
+  .project-video-link-container {
+    width: 100%;
+  }
+
   .project-video {
     width: 100%;
   }
